2008-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-caldavEventRequest:eventwithContent:iCalStringfrom:originatorto:recipients]):
	simplified method since REPLY and REQUEST posts are very similar.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -postCalDAVEventReplyTo:recipients]): new
	method that handle CalDAV REPLY posts by updating the event in the
	table of the SOGo users and send the reply by email as well.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:_pageNameforOldObject:_oldObjectandNewObject:_newObjecttoAttendees:_attendees]):
	take the current user as originator rather than the object's owner.

2008-07-07  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([WOActionResults
	allContactSearchAction]): new method to search contacts among
	all address books.

2008-07-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-POSTAction:localContext]): take the content type as well as the
	request and pass them as parameter to the new method below.
	([SOGoObject
	-davPOSTRequest:requestwithContentType:cTypeinContext:localContext]):
	new method designed to handle POST requests on DAV objects.

2008-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-caldavEventRequest:eventfrom:originatorto:recipients]): handle
	caldav replies.
	([SOGoAppointmentFolder -lookupComponentByUID:uid]): new method
	that returns an event search by uid.

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m ([SOGoUserFolder -davCalendarHomeSet])
	([SOGoUserFolder -davCalendarScheduleInboxURL])
	([SOGoUserFolder -davCalendarScheduleOutboxURL])
	([SOGoUserFolder -davDropboxHomeURL])
	([SOGoUserFolder -davNotificationsURL]): new methods for